--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "moment": "^2.22.2",
     "mysql2": "^1.3.6",
-    "sequelize": "^4.3.1"
+    "sequelize": "^4.3.1",
+    "tabulator-tables": "^4.1.2"
   }
 }
