--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.3",
     "moment": "^2.22.2",
     "mysql2": "^1.3.6",
+    "nodemailer": "^4.7.0",
     "sequelize": "^4.3.1",
     "tabulator-tables": "^4.1.2"
   }
