--- a/config/config.json
+++ b/config/config.json
@@ -16,10 +16,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "g0et8f6qk5xlusq3",
+    "password": 	"fu49l5bcljjtuk9h",
+    "database": "f1rd7yuop8mapwi6",
+    "host": "etdq12exrvdjisg6.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "port": 3306,
     "dialect": "mysql"
   }
